# sveltekit-fastapi-starter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.devcontainer/: Containerfile  devcontainer.json
backend/: Containerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py  routes.py
frontend/: .eslintignore  .prettierignore  Containerfile  eslint.config.js  package-lock.json  package.json  prettier.config.js
frontend/src/: app.d.ts
frontend/src/routes/: +page.svelte
