[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-sveltekit-starter"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A SvelteKit + FastAPI project"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]" # include all standard dependencies https://fastapi.tiangolo.com/release-notes/#01120
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.pyright]
pythonVersion = "3.13"              # Latest stable Python version
useLibraryCodeForTypes = true       # Use library code for type information
stubPath = "./typings"              # Type stub files location
extraPaths = ["src/"]               # Additional module search paths
include = [                         # Files to include in type checking
    "src",
    "tests"
]
typeCheckingMode = "strict"        # Enables comprehensive type checking

# Additional checks not included in strict mode
reportImplicitOverride = "error"      # Report missing @override decorators

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "Q", # flake8-quotes-q
    "I", # isort
    "S", # flake8-bandit-s
    "UP", # pyupgrade
    "W", # pycodestyle
    "PT", # pytest
    "FAST", # fastapi
    "PERF", # perflint
    "DOC", # pydoclint
    "RUF"
]
